# bazel_test

./: .gitignore  Cargo.toml  WORKSPACE.bazel  cargo-bazel-lock.json
app/app1/: BUILD.bazel  Cargo.toml
app/app1/src/: main.rs
image/image1/: BUILD.bazel
